# song2lrc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/lyricsfetcher/: lyrics.py
src/theme/: purple.json
src/ui/: ui.py
